# AI-Interview-Agent

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/api/routes/: ingest.py  interview.py
backend/cache/: redis_client.py
backend/chroma_db/: chroma.sqlite3
backend/core/: config.py  llm.py  logging.py
backend/db/: __init__.py  init_db.py  models.py  session.py
backend/parsing/: Github_parser.py  JD_parser.py  chunking.py  linkedin_parser.py  proxy_session.py  resume_parser.py  validators.py
backend/vectorStore/: chroma_client.py  embeddings.py  indexer.py
backend/voice/: __init__.py  stt.py  tts.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/ui/: Button.tsx  GlassCard.tsx  Input.tsx  Textarea.tsx
frontend/app/interview/[session_id]/: page.tsx
frontend/app/lib/: audio.ts
