[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assemblyai>=0.64.26",
    "av>=18.0.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "elevenlabs>=2.57.0",
    "fastapi>=0.139.0",
    "fpdf2>=2.8.7",
    "gitpython>=3.1.50",
    "graphviz>=0.21",
    "ipython>=9.15.0",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langgraph-sdk>=0.4.2",
    "lxml>=6.1.1",
    "openai>=2.45.0",
    "pdfplumber>=0.11.10",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "requests-ip-rotator>=1.0.18",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
